--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li><a href="https://github.com/caoweiguang" class="fa-github">GitHub</a></li>
+								<!-- <li><a href="#" class="fa-instagram">Instagram</a></li> -->
+								<li><a href="https://www.facebook.com/caowg" class="fa-facebook">Facebook</a></li>
 							</ul>
 						</footer>
 					</section>
